src/bigqueryParser.cpp

// Generated from bigquery.g4 by ANTLR 4.7.1


#include "bigqueryListener.h"

#include "bigqueryParser.h"


using namespace antlrcpp;
using namespace antlr4;

bigqueryParser::bigqueryParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

bigqueryParser::~bigqueryParser() {
  delete _interpreter;
}

std::string bigqueryParser::getGrammarFileName() const {
  return "bigquery.g4";
}

const std::vector<std::string>& bigqueryParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& bigqueryParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ParseContext ------------------------------------------------------------------

bigqueryParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bigqueryParser::Query_statementContext* bigqueryParser::ParseContext::query_statement() {
  return getRuleContext<bigqueryParser::Query_statementContext>(0);
}


size_t bigqueryParser::ParseContext::getRuleIndex() const {
  return bigqueryParser::RuleParse;
}

void bigqueryParser::ParseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParse(this);
}

void bigqueryParser::ParseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParse(this);
}

bigqueryParser::ParseContext* bigqueryParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, bigqueryParser::RuleParse);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    query_statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Query_statementContext ------------------------------------------------------------------

bigqueryParser::Query_statementContext::Query_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bigqueryParser::Query_exprContext* bigqueryParser::Query_statementContext::query_expr() {
  return getRuleContext<bigqueryParser::Query_exprContext>(0);
}

bigqueryParser::With_statementContext* bigqueryParser::Query_statementContext::with_statement() {
  return getRuleContext<bigqueryParser::With_statementContext>(0);
}


size_t bigqueryParser::Query_statementContext::getRuleIndex() const {
  return bigqueryParser::RuleQuery_statement;
}

void bigqueryParser::Query_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery_statement(this);
}

void bigqueryParser::Query_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery_statement(this);
}

bigqueryParser::Query_statementContext* bigqueryParser::query_statement() {
  Query_statementContext *_localctx = _tracker.createInstance<Query_statementContext>(_ctx, getState());
  enterRule(_localctx, 2, bigqueryParser::RuleQuery_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == bigqueryParser::WITH) {
      setState(114);
      with_statement();
    }
    setState(117);
    query_expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Query_exprContext ------------------------------------------------------------------

bigqueryParser::Query_exprContext::Query_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bigqueryParser::Select_statementContext *> bigqueryParser::Query_exprContext::select_statement() {
  return getRuleContexts<bigqueryParser::Select_statementContext>();
}

bigqueryParser::Select_statementContext* bigqueryParser::Query_exprContext::select_statement(size_t i) {
  return getRuleContext<bigqueryParser::Select_statementContext>(i);
}

std::vector<bigqueryParser::Set_opContext *> bigqueryParser::Query_exprContext::set_op() {
  return getRuleContexts<bigqueryParser::Set_opContext>();
}

bigqueryParser::Set_opContext* bigqueryParser::Query_exprContext::set_op(size_t i) {
  return getRuleContext<bigqueryParser::Set_opContext>(i);
}

bigqueryParser::Order_clauseContext* bigqueryParser::Query_exprContext::order_clause() {
  return getRuleContext<bigqueryParser::Order_clauseContext>(0);
}

bigqueryParser::Limit_clauseContext* bigqueryParser::Query_exprContext::limit_clause() {
  return getRuleContext<bigqueryParser::Limit_clauseContext>(0);
}

bigqueryParser::Query_exprContext* bigqueryParser::Query_exprContext::query_expr() {
  return getRuleContext<bigqueryParser::Query_exprContext>(0);
}


size_t bigqueryParser::Query_exprContext::getRuleIndex() const {
  return bigqueryParser::RuleQuery_expr;
}

void bigqueryParser::Query_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery_expr(this);
}

void bigqueryParser::Query_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery_expr(this);
}

bigqueryParser::Query_exprContext* bigqueryParser::query_expr() {
  Query_exprContext *_localctx = _tracker.createInstance<Query_exprContext>(_ctx, getState());
  enterRule(_localctx, 4, bigqueryParser::RuleQuery_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(138);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case bigqueryParser::SELECT: {
        enterOuterAlt(_localctx, 1);
        setState(119);
        select_statement();
        setState(125);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(120);
            set_op();
            setState(121);
            select_statement(); 
          }
          setState(127);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        }
        setState(129);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          setState(128);
          order_clause();
          break;
        }

        }
        setState(132);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          setState(131);
          limit_clause();
          break;
        }

        }
        break;
      }

      case bigqueryParser::T__0: {
        enterOuterAlt(_localctx, 2);
        setState(134);
        match(bigqueryParser::T__0);
        setState(135);
        query_expr();
        setState(136);
        match(bigqueryParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_statementContext ------------------------------------------------------------------

bigqueryParser::Select_statementContext::Select_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bigqueryParser::Select_statementContext::SELECT() {
  return getToken(bigqueryParser::SELECT, 0);
}

bigqueryParser::Expression_listContext* bigqueryParser::Select_statementContext::expression_list() {
  return getRuleContext<bigqueryParser::Expression_listContext>(0);
}

bigqueryParser::From_statementContext* bigqueryParser::Select_statementContext::from_statement() {
  return getRuleContext<bigqueryParser::From_statementContext>(0);
}

bigqueryParser::Where_statementContext* bigqueryParser::Select_statementContext::where_statement() {
  return getRuleContext<bigqueryParser::Where_statementContext>(0);
}

bigqueryParser::Group_statementContext* bigqueryParser::Select_statementContext::group_statement() {
  return getRuleContext<bigqueryParser::Group_statementContext>(0);
}

bigqueryParser::Having_statementContext* bigqueryParser::Select_statementContext::having_statement() {
  return getRuleContext<bigqueryParser::Having_statementContext>(0);
}

tree::TerminalNode* bigqueryParser::Select_statementContext::ALL() {
  return getToken(bigqueryParser::ALL, 0);
}

tree::TerminalNode* bigqueryParser::Select_statementContext::DISTINCT() {
  return getToken(bigqueryParser::DISTINCT, 0);
}


size_t bigqueryParser::Select_statementContext::getRuleIndex() const {
  return bigqueryParser::RuleSelect_statement;
}

void bigqueryParser::Select_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelect_statement(this);
}

void bigqueryParser::Select_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelect_statement(this);
}

bigqueryParser::Select_statementContext* bigqueryParser::select_statement() {
  Select_statementContext *_localctx = _tracker.createInstance<Select_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, bigqueryParser::RuleSelect_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    match(bigqueryParser::SELECT);
    setState(142);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(141);
      _la = _input->LA(1);
      if (!(_la == bigqueryParser::ALL

      || _la == bigqueryParser::DISTINCT)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    }
    setState(144);
    expression_list();
    setState(146);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(145);
      from_statement();
      break;
    }

    }
    setState(149);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(148);
      where_statement();
      break;
    }

    }
    setState(152);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(151);
      group_statement();
      break;
    }

    }
    setState(155);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(154);
      having_statement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Expression_listContext ------------------------------------------------------------------

bigqueryParser::Expression_listContext::Expression_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bigqueryParser::Alias_exprContext *> bigqueryParser::Expression_listContext::alias_expr() {
  return getRuleContexts<bigqueryParser::Alias_exprContext>();
}

bigqueryParser::Alias_exprContext* bigqueryParser::Expression_listContext::alias_expr(size_t i) {
  return getRuleContext<bigqueryParser::Alias_exprContext>(i);
}

std::vector<bigqueryParser::Star_exprContext *> bigqueryParser::Expression_listContext::star_expr() {
  return getRuleContexts<bigqueryParser::Star_exprContext>();
}

bigqueryParser::Star_exprContext* bigqueryParser::Expression_listContext::star_expr(size_t i) {
  return getRuleContext<bigqueryParser::Star_exprContext>(i);
}

std::vector<bigqueryParser::Except_statementContext *> bigqueryParser::Expression_listContext::except_statement() {
  return getRuleContexts<bigqueryParser::Except_statementContext>();
}

bigqueryParser::Except_statementContext* bigqueryParser::Expression_listContext::except_statement(size_t i) {
  return getRuleContext<bigqueryParser::Except_statementContext>(i);
}

std::vector<bigqueryParser::Replace_statementContext *> bigqueryParser::Expression_listContext::replace_statement() {
  return getRuleContexts<bigqueryParser::Replace_statementContext>();
}

bigqueryParser::Replace_statementContext* bigqueryParser::Expression_listContext::replace_statement(size_t i) {
  return getRuleContext<bigqueryParser::Replace_statementContext>(i);
}


size_t bigqueryParser::Expression_listContext::getRuleIndex() const {
  return bigqueryParser::RuleExpression_list;
}

void bigqueryParser::Expression_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression_list(this);
}

void bigqueryParser::Expression_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression_list(this);
}

bigqueryParser::Expression_listContext* bigqueryParser::expression_list() {
  Expression_listContext *_localctx = _tracker.createInstance<Expression_listContext>(_ctx, getState());
  enterRule(_localctx, 8, bigqueryParser::RuleExpression_list);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(165);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      setState(157);
      star_expr();
      setState(159);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
      case 1: {
        setState(158);
        except_statement();
        break;
      }

      }
      setState(162);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
      case 1: {
        setState(161);
        replace_statement();
        break;
      }

      }
      break;
    }

    case 2: {
      setState(164);
      alias_expr();
      break;
    }

    }
    setState(180);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(167);
        match(bigqueryParser::T__2);
        setState(176);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
        case 1: {
          setState(168);
          star_expr();
          setState(170);
          _errHandler->sync(this);

          switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
          case 1: {
            setState(169);
            except_statement();
            break;
          }

          }
          setState(173);
          _errHandler->sync(this);

          switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
          case 1: {
            setState(172);
            replace_statement();
            break;
          }

          }
          break;
        }

        case 2: {
          setState(175);
          alias_expr();
          break;
        }

        } 
      }
      setState(182);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Star_exprContext ------------------------------------------------------------------

bigqueryParser::Star_exprContext::Star_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bigqueryParser::ExprContext* bigqueryParser::Star_exprContext::expr() {
  return getRuleContext<bigqueryParser::ExprContext>(0);
}


size_t bigqueryParser::Star_exprContext::getRuleIndex() const {
  return bigqueryParser::RuleStar_expr;
}

void bigqueryParser::Star_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStar_expr(this);
}

void bigqueryParser::Star_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bigqueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStar_expr(this);
}
